--- a/plans.html
+++ b/plans.html
@@ -1,75 +1,115 @@
-    <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
+  <title>Planos • MX$</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Planos MX$</title>
+
+  <!-- Supabase -->
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2.29.0/dist/supabase.min.js"></script>
+
+  <!-- Stripe -->
   <script src="https://js.stripe.com/v3/"></script>
+
   <style>
-    body { font-family: Inter, Arial, sans-serif; background:#f6f7fb; margin:0; color:#111; }
-    header { background:#4a90e2; color:#fff; padding:2.5rem 1rem; text-align:center; }
-    .plans { max-width:1000px; margin:3rem auto; display:grid; grid-template-columns:repeat(auto-fit,minmax(260px,1fr)); gap:1.5rem; padding:0 1rem; }
-    .plan { background:#fff; border-radius:14px; padding:2rem 1.5rem; box-shadow:0 10px 25px rgba(0,0,0,0.08); text-align:center; }
-    .price { font-size:1.8rem; font-weight:700; margin:1rem 0; color:#4a90e2; }
-    button { padding:0.9rem; border:none; border-radius:10px; background:#4a90e2; color:#fff; font-size:1rem; cursor:pointer; }
-    .loading { text-align:center; margin-top:3rem; font-size:1.1rem; }
-    footer { text-align:center; padding:2rem 1rem; color:#666; font-size:0.9rem; }
+    body {
+      font-family: Inter, Arial, sans-serif;
+      background: #f6f7fb;
+      margin: 0;
+    }
+
+    header {
+      background: #4a90e2;
+      color: #fff;
+      padding: 2.5rem 1rem;
+      text-align: center;
+    }
+
+    .plans {
+      max-width: 1000px;
+      margin: 3rem auto;
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+      gap: 1.5rem;
+      padding: 0 1rem;
+    }
+
+    .plan {
+      background: #fff;
+      border-radius: 14px;
+      padding: 2rem;
+      text-align: center;
+      box-shadow: 0 10px 25px rgba(0,0,0,0.08);
+    }
+
+    button {
+      margin-top: 1rem;
+      padding: 0.9rem;
+      width: 100%;
+      border-radius: 10px;
+      border: none;
+      background: #4a90e2;
+      color: #fff;
+      font-size: 1rem;
+      cursor: pointer;
+    }
   </style>
 </head>
+
 <body>
 
 <header>
   <h1>Escolha seu plano MX$</h1>
-  <p>Acesso completo ao app enquanto sua assinatura estiver ativa</p>
+  <p>Acesso completo enquanto sua assinatura estiver ativa</p>
 </header>
-
-<div id="loading" class="loading">Verificando login...</div>
 
 <section id="plans" class="plans" style="display:none;">
   <div class="plan">
     <h2>Mensal</h2>
-    <div class="price">R$ 49,90</div>
+    <p>R$ 49,90</p>
     <button data-price="price_1Sb2liIrLyzh0kTrj2sUPVQp">Assinar</button>
   </div>
+
   <div class="plan">
     <h2>Semestral</h2>
-    <div class="price">R$ 239,90</div>
+    <p>R$ 239,90</p>
     <button data-price="price_1Sb2liIrLyzh0kTr2jzoWNjW">Assinar</button>
   </div>
+
   <div class="plan">
     <h2>Anual</h2>
-    <div class="price">R$ 359,90</div>
+    <p>R$ 359,90</p>
     <button data-price="price_1Sb2liIrLyzh0kTrtoYXI7TV">Assinar</button>
   </div>
 </section>
 
-<footer>© MX$ • Pagamentos seguros via Stripe</footer>
-
 <script>
   const SUPABASE_URL = "https://ogosbyjhxjatukdhkiqw.supabase.co";
-  const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im9nb3NieWpoeGphdHVrZGhraXF3Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjUwMzIzMDUsImV4cCI6MjA4MDYwODMwNX0.-KbpngKGuRluFRdNcdKP14X13yUJIOzLaqjDyWAYHVc";
-  const supabase = Supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
+  const SUPABASE_ANON_KEY =
+    "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im9nb3NieWpoeGphdHVrZGhraXF3Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjUwMzIzMDUsImV4cCI6MjA4MDYwODMwNX0.-KbpngKGuRluFRdNcdKP14X13yUJIOzLaqjDyWAYHVc";
 
-  const stripe = Stripe("pk_test_51SX5qDIrLyzh0kTrlUoIADRWlzgMIYQh827VH5rUG0r4B32nN56SfmP2Wn7kBS9ltkeF8b7romn3leJH0Dc04rOk00PZY5X4hZ");
+  const supabaseClient = window.supabase.createClient(
+    SUPABASE_URL,
+    SUPABASE_ANON_KEY
+  );
+
+  const stripe = Stripe(
+    "pk_test_51SX5qDIrLyzh0kTrlUoIADRWlzgMIYQh827VH5rUG0r4B32nN56SfmP2Wn7kBS9ltkeF8b7romn3leJH0Dc04rOk00PZY5X4hZ"
+  );
 
   async function init() {
-    const { data } = await supabase.auth.getSession();
+    const { data } = await supabaseClient.auth.getSession();
 
     if (!data.session) {
       window.location.href = "login.html";
       return;
     }
 
-    const currentUser = data.session.user;
-
-    document.getElementById("loading").style.display = "none";
     document.getElementById("plans").style.display = "grid";
 
     document.querySelectorAll("button[data-price]").forEach(btn => {
-      btn.addEventListener("click", async () => {
+      btn.onclick = async () => {
         btn.disabled = true;
-        btn.innerText = "Redirecionando...";
 
         const res = await fetch(
           "https://ogosbyjhxjatukdhkiqw.supabase.co/functions/v1/create-checkout-session-",
@@ -81,21 +121,20 @@
             },
             body: JSON.stringify({
               priceId: btn.dataset.price,
-              userId: currentUser.id
+              userId: data.session.user.id
             })
           }
         );
 
-        const data = await res.json();
+        const json = await res.json();
 
-        if (data.sessionId) {
-          stripe.redirectToCheckout({ sessionId: data.sessionId });
+        if (json.sessionId) {
+          stripe.redirectToCheckout({ sessionId: json.sessionId });
         } else {
           alert("Erro ao iniciar pagamento");
           btn.disabled = false;
-          btn.innerText = "Assinar";
         }
-      });
+      };
     });
   }
 
