--- a/login.html
+++ b/login.html
@@ -2,116 +2,165 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
-  <title>Login MX$</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Entrar — MX$</title>
 
+  <!-- Supabase -->
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2.29.0/dist/supabase.min.js"></script>
 
   <style>
     body {
       font-family: Inter, Arial, sans-serif;
       background: #f6f7fb;
+      margin: 0;
       display: flex;
       justify-content: center;
       align-items: center;
       height: 100vh;
+      color: #111;
     }
 
-    .box {
+    .card {
       background: #fff;
       padding: 2rem;
-      border-radius: 12px;
+      border-radius: 14px;
       width: 100%;
       max-width: 360px;
-      box-shadow: 0 10px 25px rgba(0,0,0,.1);
+      box-shadow: 0 10px 30px rgba(0,0,0,0.08);
+      text-align: center;
     }
 
-    h1 { text-align: center; }
+    h1 {
+      margin-bottom: 1.5rem;
+    }
 
-    input, button {
+    input {
       width: 100%;
-      padding: 0.8rem;
-      margin-top: 0.8rem;
+      padding: 0.75rem;
+      margin-bottom: 0.8rem;
       border-radius: 8px;
       border: 1px solid #ccc;
       font-size: 1rem;
     }
 
     button {
-      background: #4a90e2;
-      color: #fff;
+      width: 100%;
+      padding: 0.75rem;
       border: none;
+      border-radius: 8px;
+      font-size: 1rem;
       cursor: pointer;
+      margin-top: 0.5rem;
     }
 
-    button.google {
-      background: #111;
+    .btn-primary {
+      background: #4a90e2;
+      color: #fff;
+    }
+
+    .btn-google {
+      background: #fff;
+      border: 1px solid #ddd;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 8px;
+    }
+
+    .btn-google img {
+      width: 18px;
     }
 
     .msg {
       margin-top: 1rem;
-      color: red;
-      text-align: center;
+      font-size: 0.9rem;
+      color: #d33;
     }
   </style>
 </head>
 
 <body>
-  <div class="box">
-    <h1>Login MX$</h1>
 
-    <input id="email" type="email" placeholder="Email" />
-    <input id="password" type="password" placeholder="Senha" />
-    <button onclick="loginEmail()">Entrar</button>
+<div class="card">
+  <h1>Entrar no MX$</h1>
 
-    <button class="google" onclick="loginGoogle()">Entrar com Google</button>
+  <input id="email" type="email" placeholder="Email" />
+  <input id="password" type="password" placeholder="Senha" />
 
-    <div id="msg" class="msg"></div>
-  </div>
+  <button class="btn-primary" id="btnEmail">
+    Entrar / Criar conta
+  </button>
+
+  <hr style="margin:1.2rem 0" />
+
+  <button class="btn-google" id="btnGoogle">
+    <img src="https://www.gstatic.com/firebasejs/ui/2.0.0/images/auth/google.svg" />
+    Entrar com Google
+  </button>
+
+  <div class="msg" id="msg"></div>
+</div>
 
 <script>
   const SUPABASE_URL = "https://ogosbyjhxjatukdhkiqw.supabase.co";
-  const SUPABASE_ANON_KEY = "SUA_ANON_KEY_AQUI";
+  const SUPABASE_ANON_KEY =
+    "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im9nb3NieWpoeGphdHVrZGhraXF3Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjUwMzIzMDUsImV4cCI6MjA4MDYwODMwNX0.-KbpngKGuRluFRdNcdKP14X13yUJIOzLaqjDyWAYHVc";
 
   const supabase = window.supabase.createClient(
     SUPABASE_URL,
     SUPABASE_ANON_KEY
   );
 
-  // 🔐 LOGIN EMAIL
-  async function loginEmail() {
-    const email = document.getElementById("email").value;
+  const msg = document.getElementById("msg");
+
+  // 🔐 EMAIL / SENHA (login ou cria)
+  document.getElementById("btnEmail").onclick = async () => {
+    msg.innerText = "Processando...";
+
+    const email = document.getElementById("email").value.trim();
     const password = document.getElementById("password").value;
 
+    if (!email || !password) {
+      msg.innerText = "Preencha email e senha.";
+      return;
+    }
+
+    // tenta login
     const { error } = await supabase.auth.signInWithPassword({
       email,
       password
     });
 
-    if (error) {
-      document.getElementById("msg").innerText = error.message;
-    } else {
+    if (!error) {
       window.location.href = "plans.html";
+      return;
     }
-  }
 
-  // 🔐 LOGIN GOOGLE (FORÇADO PARA GITHUB PAGES)
-  async function loginGoogle() {
+    // se não existir, cria conta
+    const { error: signupError } = await supabase.auth.signUp({
+      email,
+      password
+    });
+
+    if (signupError) {
+      msg.innerText = signupError.message;
+      return;
+    }
+
+    msg.innerText = "Conta criada! Entrando...";
+    window.location.href = "plans.html";
+  };
+
+  // 🔵 GOOGLE OAUTH
+  document.getElementById("btnGoogle").onclick = async () => {
     await supabase.auth.signInWithOAuth({
       provider: "google",
       options: {
-        redirectTo: "https://brasilloteca.github.io/mxdollar-seco/plans.html"
+        redirectTo:
+          "https://brasilloteca.github.io/mxdollar-seco/auth-callback.html"
       }
     });
-  }
-
-  // 🔁 SE JÁ ESTIVER LOGADO, REDIRECIONA
-  (async () => {
-    const { data } = await supabase.auth.getSession();
-    if (data.session) {
-      window.location.href = "plans.html";
-    }
-  })();
+  };
 </script>
 
 </body>
